--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,8 +39,26 @@ button {
 
 label {
     margin: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
 }
 
 p {
     font-size: 32px;
+}
+
+h1 {
+    text-align: center;
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    text-shadow: black 1px 1px;
+}
+
+input {
+    width: 56px;
 }
